Criação do CRUD de Pessoa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/pessoa_spring?useTimezone=true&serverTimezone=UTC
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Vl102030@
-spring.jpa.ddl-auto= update
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
